--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "devDependencies": {
     "eslint": "^4.7.0",
     "eslint-config-prettier": "^2.4.0",
-    "eslint-plugin-import": "^2.7.0",
-    "koa": "^2.3.0"
+    "eslint-plugin-import": "^2.7.0"
   },
   "dependencies": {
     "moment": "^2.18.1",
